feat: slides update

--- a/src/index.html
+++ b/src/index.html
@@ -250,10 +250,44 @@
                         <deckgo-lazy-img img-src="https://images.unsplash.com/photo-1589652717406-1c69efaf1ff8?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="Pomeranian working on an iPad"></deckgo-lazy-img>
                     </div>
                 </deckgo-slide-split>
-                <deckgo-slide-content>
-                    <h2 slot="title" spellcheck="false">Culture &amp; focus with Jeff
+                <deckgo-slide-content custom-background="true">
+                    <h2 slot="title" spellcheck="true" style="color: rgb(255, 255, 255);">Culture &amp; focus with Jeff
+
                     </h2>
-                    <section slot="content" spellcheck="true"></section>
+                    <div slot="background">
+                        <deckgo-lazy-img img-src="https://images.unsplash.com/photo-1586810165616-94c631fc2f79?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="https://unsplash.com/photos/yO12O8j3JK0"></deckgo-lazy-img>
+                    </div>
+                </deckgo-slide-content>
+                <deckgo-slide-content custom-background="true">
+                    <h2 slot="title"><span style="color: rgb(255, 255, 255);">24 January 2010</span></h2>
+                    <deckgo-lazy-img slot="content" img-src="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20096%20-%20OSDC_correspondents_10_13_20%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=57ccc5b3-bb88-4151-96a6-37c5cfc0b3f1" img-alt="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20096%20-%20OSDC_correspondents_10_13_20%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=57ccc5b3-bb88-4151-96a6-37c5cfc0b3f1"></deckgo-lazy-img>
+                    <div slot="background">
+                        <deckgo-lazy-img img-src="https://images.unsplash.com/photo-1594524782588-00874596deec?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="https://unsplash.com/photos/FqG-cmhbGKw"></deckgo-lazy-img>
+                    </div>
+                </deckgo-slide-content>
+                <deckgo-slide-content custom-background="true">
+                    <h2 slot="title">01 February 2013</h2>
+                    <deckgo-lazy-img slot="content" img-src="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20099%20-%20OSDC_correspondents_10_13_20%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=7475d1ad-8a06-4633-ab0b-77efb06f2c57" img-alt="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20099%20-%20OSDC_correspondents_10_13_20%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=7475d1ad-8a06-4633-ab0b-77efb06f2c57"></deckgo-lazy-img>
+                    <div slot="background">
+                        <deckgo-lazy-img img-src="https://images.unsplash.com/photo-1567177662154-dfeb4c93b6ae?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="Sunlight "></deckgo-lazy-img>
+                    </div>
+                </deckgo-slide-content>
+                <deckgo-slide-content custom-background="true">
+                    <h2 slot="title"><span style="color: rgb(255, 255, 255);">September 2020</span></h2>
+                    <deckgo-lazy-img slot="content" img-src="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20102%20-%20OSDC_correspondents_10_13_20%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=2409d0bf-f2dd-4469-b8e8-1481659aa4f1" img-alt="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20102%20-%20OSDC_correspondents_10_13_20%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=2409d0bf-f2dd-4469-b8e8-1481659aa4f1"></deckgo-lazy-img>
+                    <div slot="background">
+                        <deckgo-lazy-img img-src="https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="Colorful galaxy"></deckgo-lazy-img>
+                    </div>
+                </deckgo-slide-content>
+                <deckgo-slide-content>
+                    <deckgo-lazy-img slot="content" img-src="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20105%20-%20OSDC_correspondents_10_13_20%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=dc1ff088-4758-46a7-a2d7-63baf6eb2a2c" img-alt="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20105%20-%20OSDC_correspondents_10_13_20%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=dc1ff088-4758-46a7-a2d7-63baf6eb2a2c"></deckgo-lazy-img>
+                </deckgo-slide-content>
+                <deckgo-slide-content custom-background="true">
+                    <h2 slot="title"><span style="color: rgb(255, 255, 255);">Open unlocks the world&#39;s potential!</span></h2>
+                    <deckgo-lazy-img slot="content" img-src="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20108%20-%20OSDC_correspondents_10_13_20%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=029717a1-2b55-4f49-bec9-e95374868354" img-alt="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20108%20-%20OSDC_correspondents_10_13_20%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=029717a1-2b55-4f49-bec9-e95374868354"></deckgo-lazy-img>
+                    <div slot="background">
+                        <deckgo-lazy-img img-src="https://images.unsplash.com/photo-1533985062386-ef0837f31bc0?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="Dandelions are everywhere in Finland in Spring!"></deckgo-lazy-img>
+                    </div>
                 </deckgo-slide-content>
                 <deckgo-slide-content custom-background="true">
                     <h2 slot="title" spellcheck="true" style="text-align: center;">One Must Go (game)
@@ -293,49 +327,55 @@
                     </div>
                 </deckgo-slide-content>
                 <deckgo-slide-split custom-background="true">
-                    <section slot="start" style="text-align: center;"><span style="font-weight: initial;"><span style="font-size: xx-large;"><span style="font-weight: bold;"><span style="color: rgb(0, 0, 0);"><span style="background-color: rgb(0, 0, 0);"><span style="color: rgb(255, 255, 255); background-color: rgb(6, 147, 227);">What does it mean to be a part of this community?</span></span></span></span></span></span><br></section>
+                    <section slot="start" style="text-align: center;"><span style="font-weight: initial;"><span style="font-size: xx-large;"><span style="font-weight: bold;"><span style="color: rgb(0, 0, 0);"><span style="background-color: rgb(0, 0, 0);"><span style="color: rgb(255, 255, 255); background-color: rgb(6, 147, 227);">What does it mean to be a part of this community?</span></span></span></span></span></span>
+                        <div><br>
+                            <div><span style="font-weight: initial;"><span style="font-size: xx-large;"><span style="font-weight: bold;"><span style="color: rgb(0, 0, 0);"><span style="background-color: rgb(0, 0, 0);"><span style="color: rgb(255, 255, 255); background-color: rgb(6, 147, 227);">with Jen</span></span></span></span></span></span></div>
+                        </div>
+                    </section>
                     <deckgo-lazy-img slot="end" img-src="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20039%20-%20OSDC%20Community%20Central%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=3ac2f2b9-396d-473d-ba07-04d9a87ee0c5" img-alt="https://firebasestorage.googleapis.com/v0/b/deckdeckgo-studio-prod.appspot.com/o/YpTs2aVmqRMLI5HFHchkHm2lhww1%2Fassets%2Fimages%2FFireShot%20Capture%20039%20-%20OSDC%20Community%20Central%20-%20Google%20Slides%20-%20docs.google.com.png?alt=media&amp;token=3ac2f2b9-396d-473d-ba07-04d9a87ee0c5"></deckgo-lazy-img>
                     <div slot="background">
                         <deckgo-lazy-img img-src="https://images.unsplash.com/photo-1553867253-b9620c9955fc?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="https://unsplash.com/photos/fqao7izA1Fc"></deckgo-lazy-img>
                     </div>
                 </deckgo-slide-split>
-                <deckgo-slide-content>
+                <deckgo-slide-content custom-background="true">
                     <section slot="content"><b style="font-size: xx-large;">We value...
+
 
                         </b>
                         <div><br></div>
-                        <div>Diversity
+                        <div><span style="font-weight: bold;">Diversity</span></div>
+                        <div><span style="font-weight: bold;">-- location, age, ethnicity, gender</span></div>
+                        <div><span style="font-weight: bold;">-- technical expertise and interests</span></div>
+                        <div><span style="font-weight: bold;">-- passion projects</span></div>
+                        <div><span style="font-weight: bold;">-- writing style</span></div>
+                        <div><span style="font-weight: bold;"><br></span></div>
+                        <div><span style="font-weight: bold;">These characteristics</span></div>
+                        <div><span style="font-weight: bold;">-- Kindness
 
-                            <br>-- location, age, ethnicity, gender
 
-                            <br>-- technical expertise and interests
+                                -- Humility
 
-                            <br>-- passion projects
 
-                            <br>-- writing style
+                                -- Curiosity </span></div>
+                        <div><span style="font-weight: bold;"><br></span></div>
+                        <div><span style="font-weight: bold;"><br></span></div>
+                        <div><span style="font-weight: bold;"><br></span></div>
+                        <div><span style="font-weight: bold;"><br></span></div>
+                        <div><span style="font-weight: bold;">A passion for sharing</span></div>
+                        <div><span style="font-weight: bold;">-- ideas with editors </span></div>
+                        <div><span style="font-weight: bold;">-- ideas with each other </span></div>
+                        <div><span style="font-weight: bold;">-- review and feedback of articles</span>
+                            <div>
 
-                            <br><br>These characteristics
-
-                            <br>-- Kindness
-
-                            <br>-- Humility
-
-                            <br>-- Curiosity
-
-                            <div><br></div>
-                            <div>Sharing
-
-                                <br>-- ideas with editors
-
-                                <br>-- ideas with each other
-
-                                <br>-- review and feedback of articles
 
                                 <div><br></div>
                                 <div><br></div>
                             </div>
                         </div>
                     </section>
+                    <div slot="background">
+                        <deckgo-lazy-img img-src="https://images.unsplash.com/photo-1455849318743-b2233052fcff?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjcyMTQyfQ" img-alt="https://unsplash.com/photos/TamMbr4okv4"></deckgo-lazy-img>
+                    </div>
                 </deckgo-slide-content>
                 <deckgo-slide-content>
                     <section slot="content"><span style="font-size: initial;"><span style="font-size: x-large;"><span style="font-weight: bold;"></span></span></span><span style="font-size: initial;"><span><span><span style="font-weight: bold;"></span></span></span><span style="font-size: x-large;"><span><span><span style="font-weight: bold;">Program requirement:
